rmhub/k8s/helper-pods/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static-deployment
  namespace: custom-apps
  labels:
    app: nginx-static-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-static-deployment
  template:
    metadata:
      labels:
        app: nginx-static-deployment
    spec:
      containers:
      - image: "nginx:1.17.1"
        name: nginx
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: nginx-static-pages
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: nginx-static-config
          mountPath: /etc/nginx/
      - image: eu.gcr.io/aerial-utility-244114/leannet-sshd:0.1
        # imagePullPolicy: Never
        name: sshd
        ports:
        - containerPort: 22
          name: ssh
        volumeMounts:
        - name: nginx-static-pages
          mountPath: /usr/share/nginx/html
        - name: nginx-static-sshpubkey
          mountPath: /root/.ssh/authorized_keys
          subPath: authorized_keys
      volumes:
        - name: nginx-static-config
          configMap:
            name: nginx-static-config
        - name: nginx-static-sshpubkey
          secret:
            secretName: nginx-static-sshpubkey
            defaultMode: 384
        - name: nginx-static-pages
          persistentVolumeClaim:
            claimName: nginx-static-pvc
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-web-service
  namespace: custom-apps
  labels:
    run: nginx-web-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: ssh
    protocol: TCP
  selector:
    app: nginx-static-deployment

---

apiVersion: extensions/v1beta1
# apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-static-ingress
  namespace: custom-apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "ut-results.<HOST_BASE>"
      http:
        paths:
          - path: /
            backend:
               serviceName: nginx-web
               servicePort: 80
